opmaak html klaar

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ textarea {
 
 header
 {
-  background-color: #cfe2ff;
+  background-color: #c0d9ff;
   display: flex;
   justify-content: center; 
 }
