--- a/css/main.css
+++ b/css/main.css
@@ -114,11 +114,20 @@ h1
 {
   display: flex;
   justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
 }
 h2
 {
   display: flex;
   justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+}
+p
+{
+  font-family: "Lucida Console", "Monaco", monospace;
+  font-size: 300;
 }
 .leerling
 {
